tests/fixtures/positive/release-engineering/module-template-conformance/settings.gradle.kts
rootProject.name = "module-template-conformance-positive"

include(
    ":feature:payments",
    ":feature:payments:ui",
    ":feature:payments:domain",
)
