tests/fixtures/negative/release-engineering/module-template-conformance/settings.gradle.kts
rootProject.name = "module-template-conformance-negative"

include(
    ":feature:payments",
    ":feature:payments:ui",
    ":feature:payments:data",
    ":feature:payments:domain",
)
